--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     .logo {
       font-weight: 700;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: var(--accent-color);
     }
 
@@ -699,7 +699,7 @@ lav-logo {
 }
 
 .hero-slogan {
-      font-size: clamp(1.3rem, 3vw, 2.1rem);
+      font-size: clamp(1rem, 3vw, 2.1rem);
       font-style: italic;
       color: var(--accent-color);
       text-align: center;
@@ -764,7 +764,7 @@ lav-logo {
 
     <div class="announcement-bar">
       <div class="container announcement-content">
-        <i class="fa fa-bullhorn"></i>
+        <i class="fa fa-bullhorn desktop-only"></i>
         <span class="announcement-text mobile-only"><a href="#contact" class="contact-link">Сбор группы на расстановки — 25 июля</a></span>
         <span class="announcement-text desktop-only">Сбор группы на расстановки — 25 июля</span>
         <a href="#contact" class="announcement-btn desktop-only">Записаться!</a>
