--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
 
     header {
       background: white;
-      padding: 1rem;
       position: sticky;
       top: 0;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       z-index: 1000;
+
+      -webkit-backdrop-filter: blur(8px) saturate(120%);
+  border-bottom: 1.5px solid rgba(43,156,153,0.13);
+  border-radius: 0 0 18px 18px;
+  box-shadow: 0 2px 12px rgba(43,156,153,0.10);
     }
 
     .container {
@@ -528,7 +532,7 @@
 }
 
 .announcement-text.mobile-only .contact-link {
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .announcement-btn {
