--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 .testimonial-client {
   font-weight: 700;
   color: var(--primary-color);
-  font-size: 20px;
+  font-size: var(--fs20);
   margin-bottom: 0.7rem;
   align-self: flex-start;
 }
@@ -208,7 +208,7 @@
   <section class="hero">
     <div class="container">
       <div class="hero-text-block">
-        <div class="hero-slogan"> Добро пожаловать в путешествие. <span class="no-break">К себе.</span> Без масок.</div>
+        <div class="hero-slogan"> Добро пожаловать в путешествие. <span class="no-break">К себе.</span> <span class="no-break">Без масок.</span></div>
         <!-- <h1>Анна Лёвина</h1> -->
         <!-- <p class="subtitle">Если вы здесь — возможно, настал момент что-то изменить</p> -->
         <div class="hero-paragraphs">
@@ -270,14 +270,14 @@
       <div class="grid grid-2">
         <div class="about-panel">
           <h3>Границы моего профессионального поля</h3>
-          <p style="font-size: 18px;">Я не работаю с детьми, подростками, семьями. <br>
+          <p style="font-size: var(--fs18);">Я не работаю с детьми, подростками, семьями. <br>
             Также не сопровождаю случаи, связанные с зависимостью от психоактивных веществ, расстройствами пищевого поведения, психотическими состояниями, тяжёлыми формами пограничного расстройства, выраженными суицидальными рисками, нарушениями нейроразвития.
             </p>
         </div>
 
         <div class="about-panel">
           <h3>С чем люблю работать</h3>
-          <p style="font-size: 18px;">Мне особенно близки темы поиска самоопределения, смысла, внутренней опоры; экзистенциальных кризисов, духовных переживаний, внутренних трансформаций — когда привычные опоры рушатся, а новые ещё не простроены. При этом совершенно не обязательно приходить именно с этим. Зачастую человек приходит с тревогой, усталостью, тупиком в отношениях, внешним конфликтом, ощущением, что «что-то не так», а в итоге так или иначе оказывается на пути вглубь себя — того самого, настоящего, живого, иногда почти забытого. Вот здесь и начинается самое интересное.</p>
+          <p style="font-size: var(--fs18);">Мне особенно близки темы поиска самоопределения, смысла, внутренней опоры; экзистенциальных кризисов, духовных переживаний, внутренних трансформаций — когда привычные опоры рушатся, а новые ещё не простроены. При этом совершенно не обязательно приходить именно с этим. Зачастую человек приходит с тревогой, усталостью, тупиком в отношениях, внешним конфликтом, ощущением, что «что-то не так», а в итоге так или иначе оказывается на пути вглубь себя — того самого, настоящего, живого, иногда почти забытого. Вот здесь и начинается самое интересное.</p>
         </div>
       </div>
     </div>
@@ -380,7 +380,7 @@
         <i class="fas fa-envelope-open-text"></i>
       </div>
       <h2 class="section-title">Контакты</h2>
-      <p style="margin-top: 2rem; text-align: center; font-size: 20px; color: rgb(68, 68, 68);">
+      <p style="margin-top: 2rem; text-align: center; font-size: var(--fs20); color: rgb(68, 68, 68);">
         Готовы начать или есть вопросы — напишите. Перед этим рекомендую ознакомиться с соглашением.
       </p>
 
