--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 @media (max-width: 767px) {
   #testimonialLightboxImg {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 }
 @media (min-width: 768px) {
@@ -362,7 +362,7 @@
 
   <!-- Testimonials Lightbox -->
   <div id="testimonialLightbox" class="lightbox" style="display:none; z-index: 10000;" onclick="closeTestimonialLightbox()">
-    <div class="testimonial-lightbox-content" onclick="event.stopPropagation()" style="max-width: 95vw; max-height: 95vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <div class="testimonial-lightbox-content" onclick="closeTestimonialLightbox()" style="max-width: 95vw; max-height: 95vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
       <img id="testimonialLightboxImg" src="" alt="Фото отзыва" style="max-width: 90vw; max-height: 60vh; border-radius: 12px; box-shadow: 0 2px 16px rgba(0,0,0,0.13); transition: transform 0.3s;">
       <div id="testimonialLightboxClient" style="margin-top: 1.2rem; font-size: 1.2rem; color: var(--accent-color); font-weight: 700;"></div>
       <div class="nav prev" onclick="event.stopPropagation(); navigateTestimonial(-1);" style="position: absolute; left: 2vw; top: 50%; transform: translateY(-50%); font-size: 2.5rem; cursor: pointer; user-select: none;">❮</div>
@@ -586,12 +586,55 @@ function openTestimonialLightbox(index) {
   document.getElementById('testimonialLightbox').style.display = 'flex';
   document.body.style.overflow = 'hidden'; // Prevent background scroll
   document.addEventListener('keydown', testimonialLightboxKeyHandler);
+  // Add touch event listeners for swipe navigation
+  const lightbox = document.getElementById('testimonialLightbox');
+  let touchStartX = null;
+  let touchEndX = null;
+  function handleTouchStart(e) {
+    if (e.touches.length === 1) {
+      touchStartX = e.touches[0].clientX;
+      touchEndX = null;
+    }
+  }
+  function handleTouchMove(e) {
+    if (e.touches.length === 1) {
+      touchEndX = e.touches[0].clientX;
+    }
+  }
+  function handleTouchEnd(e) {
+    if (touchStartX !== null && touchEndX !== null) {
+      const dx = touchEndX - touchStartX;
+      if (Math.abs(dx) > 50) { // threshold for swipe
+        if (dx < 0) {
+          navigateTestimonial(1); // swipe left, next
+        } else {
+          navigateTestimonial(-1); // swipe right, prev
+        }
+      }
+    }
+    touchStartX = null;
+    touchEndX = null;
+  }
+  // Attach listeners
+  lightbox.addEventListener('touchstart', handleTouchStart);
+  lightbox.addEventListener('touchmove', handleTouchMove);
+  lightbox.addEventListener('touchend', handleTouchEnd);
+  // Store for removal
+  lightbox._swipeHandlers = { handleTouchStart, handleTouchMove, handleTouchEnd };
 }
 
 function closeTestimonialLightbox() {
   document.getElementById('testimonialLightbox').style.display = 'none';
   document.body.style.overflow = '';
   document.removeEventListener('keydown', testimonialLightboxKeyHandler);
+  // Remove touch event listeners for swipe navigation
+  const lightbox = document.getElementById('testimonialLightbox');
+  if (lightbox._swipeHandlers) {
+    lightbox.removeEventListener('touchstart', lightbox._swipeHandlers.handleTouchStart);
+    lightbox.removeEventListener('touchmove', lightbox._swipeHandlers.handleTouchMove);
+    lightbox.removeEventListener('touchend', lightbox._swipeHandlers.handleTouchEnd);
+    lightbox._swipeHandlers = null;
+  }
 }
 
 function navigateTestimonial(offset) {
